# tingyp

./: Cargo.toml  README.md  clippy.toml  justfile
examples/: polynomial.rs
src/: lib.rs  main.rs
