[package]
name = "genetic-progrs"
edition = "2021"
version = "0.1.0"

[features]

[dependencies]
educe = "0.6.0"
ego-tree = "0.9.0"
more_collections = { version = "0.14.3", features = ["all"] }
derive_more = { version = "1.0.0", features = ["from", "into", "mul", "mul_assign", "add", "add_assign", "not"] }
rand = "0.8.5"
rand_xoshiro = "0.6.0"
rayon = "1.10.0"
serde = "1.0.217"
serde_json = "1.0"
itertools = "0.13.0"
num = "0.4.3"
strum = { version = "0.26.3", features = ["derive"] }