[package]
name = "tinygp"
edition = "2024"
version = "0.1.0"

[features]

[dependencies]
educe = "0.6.0"
more_collections = { version = "0.14.3", features = ["all"] }
derive_more = { version = "2.0.1", features = ["from", "into", "mul", "mul_assign", "add", "add_assign", "not"] }
rand = "0.9.0"
rand_xoshiro = "0.7.0"
rayon = "1.10.0"
serde = "1.0.218"
serde_json = "1.0.139"
itertools = "0.14.0"
num = "0.4.3"
strum = { version = "0.27.1", features = ["derive"] }